@@ -1,3 +1,9 @@
+2007-11-05  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/community.R (leading.eigenvector.community) :
+	removed 'naive' version, generated by Stimulus now
+	* interfaces/R/src/rinterface.c.in : updated
+
 2007-11-01  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/plot.R (plot.igraph) : add 'main' and 'sub'
